# gojos

./: .gitignore  README.md  pyproject.toml
data/db/: fantasy.ttl  players.ttl  theopen2023.ttl  theplayers2024.ttl  tournament.ttl
gojos/: cli.py
gojos/adapter/: __init__.py  discord.py  pga_leaderboard_parser.py  value.py
gojos/cli/: __init__.py  cli.py  fantasy.py  helpers.py  tournament.py
gojos/command/: __init__.py  commanda.py  controller.py  fantasy.py  fantasy_commands.py  helpers.py  leaderboard.py  tournament.py
gojos/dataframe/: __init__.py  dataframe.py  explain_results_to_df.py  expr.py  leaderboard_df.py
gojos/fantasy/: __init__.py  helpers.py  points_strategy.py  selections.py  teams.py
gojos/fantasy/year_2023/to/: bear_necessities.py  clojos.py  fauve.py  gelato_giants.py  (+12 more)
gojos/graph/: __init__.py  player.py  tournament.py
gojos/initialiser/: __init__.py  db.py
gojos/majors/: tournaments.py
gojos/model/: __init__.py  base.py  fantasy.py  feature.py  leaderboard.py  player.py  player_score.py  round.py  tournament.py  tournament_event.py
gojos/players/: mens_players.py  players.py
gojos/plot/: __init__.py  fantasy_plot.py
gojos/presenter/: __init__.py  code_creator_presenter.py  console.py  cut_assessent_presenter.py  df_table_presenter.py  explain_presenter.py  parquet_presenter.py  plot_channel_sender.py
gojos/rdf/: __init__.py  binding.py  gn.py  predicates.py  rdf_prefix.py  sparql.py  types_of.py
gojos/repo/: __init__.py  triples.py
gojos/repo/repository/: __init__.py  fantasy_tournament.py  graphrepo.py  leaderboard.py  player.py  player_score.py  round.py  team.py  tournament.py  tournament_event.py
gojos/util/: echo.py  env.py  error.py  event_queue.py  fn.py  identity.py  logger.py  monad.py  singleton.py  tokeniser.py
gojos/util/data_scrapping/: leaderboard_parser.py  value.py
http/: pga.http
tests/: conftest.py
tests/fixtures/: __init__.py  results.py  test_players.ttl
tests/fixtures/cj2023/: __init__.py  bear_necessities.py  clojos.py  fauve.py
tests/fixtures/templates/: csvw_empty_scores.json  csvw_r1_scores.json  leaderboard.html
tests/fixtures/tournie_teams/: __init__.py  team_bear_necessities.py  team_clojo.py
tests/shared/: __init__.py  fantasy.py  graph.py  tournament.py
tests/test_adapter/: test_pga_leaderboard_parser.py
tests/test_controller/: test_leaderboard.py  test_leaderboard_controller.py
tests/test_fantasy/: test_fantasy_tournament.py  test_points_strategy.py  test_teams.py
tests/test_model/: test_leaderboard.py  test_players.py  test_tournament.py  test_tournament_event.py
tests/test_util/: test_event_queue.py
(+49 files in other folders)
