[tool.poetry]
name = "gojos"
version = "0.1.0"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
go = "gojos.cli:cli"


[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
click = "^8.1.3"
rich = "^13.4.2"
pymonad = "^2.4.0"
python-dotenv = "^1.0.0"
csvw = "^3.1.3"
polars = "^0.18.2"
discord-webhook = "^1.1.0"


[tool.poetry.group.dev.dependencies]
pytest-env = "^0.8.1"
pytest = "^7.3.2"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
